--- a/app/src/main/res/layout/goods_show_item.xml
+++ b/app/src/main/res/layout/goods_show_item.xml
@@ -31,6 +31,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="12dp"
+            android:padding="8dp"
             android:orientation="vertical">
 
             <TextView
@@ -56,7 +57,7 @@
                 android:id="@+id/goods_price"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="30dp"
+                android:layout_marginTop="12dp"
                 android:text="¥198.00"
                 android:textColor="@android:color/holo_red_light"
                 android:textSize="16sp"/>
@@ -65,8 +66,8 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
             android:layout_alignParentRight="true"
+            android:layout_marginTop="74dp"
             android:layout_marginRight="8dp">
 
             <RelativeLayout
