--- a/app/src/main/res/layout/dialog_hongbao.xml
+++ b/app/src/main/res/layout/dialog_hongbao.xml
@@ -2,6 +2,7 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
+             android:background="@mipmap/redbag"
              android:orientation="vertical">
 
 
@@ -14,7 +15,6 @@
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:src="@mipmap/avt"
         />
 
     <RelativeLayout
