--- a/app/src/main/res/layout/order_details.xml
+++ b/app/src/main/res/layout/order_details.xml
@@ -168,17 +168,25 @@
 
             </LinearLayout>
 
-            <LinearLayout
+            <HorizontalScrollView
                 android:id="@+id/goods_details1"
                 android:layout_width="match_parent"
-                android:layout_height="60dp"
+                android:layout_height="180dp"
                 android:layout_marginBottom="10dp"
                 android:layout_marginTop="10dp"
                 android:background="@color/white"
                 android:orientation="horizontal">
 
+                <LinearLayout
+                    android:id="@+id/ll_goods_details"
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
 
-            </LinearLayout>
+                </LinearLayout>
+
+
+            </HorizontalScrollView>
 
 
             <LinearLayout
