--- a/app/src/main/res/layout/filling_order.xml
+++ b/app/src/main/res/layout/filling_order.xml
@@ -130,6 +130,15 @@
                 android:layout_height="match_parent"
                 android:layout_weight="5">
 
+                <LinearLayout
+                    android:orientation="horizontal"
+                    android:id="@+id/goods_container"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+
+                </LinearLayout>
+
             </HorizontalScrollView>
 
             <RelativeLayout
