获取服务器版本

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,7 +7,7 @@
     <color name="white">#FFFFFF</color>
     <color name="red">#FF0000</color>
     <color name="black">#000000</color>
-    <color name="background">#E4E4E4</color>
+    <color name="background">#FAFAFA</color>
     <color name="text_red">#ec0f38</color>
 
 
