--- a/app/src/main/res/layout/fragment_find.xml
+++ b/app/src/main/res/layout/fragment_find.xml
@@ -36,6 +36,7 @@
                 android:src="@drawable/msg_selector"/>
 
             <ImageView
+                android:id="@+id/open_scan"
                 android:layout_width="40dp"
                 android:layout_height="match_parent"
                 android:layout_centerVertical="true"
