--- a/libzxing/src/main/res/layout/layout_serch_dialog.xml
+++ b/libzxing/src/main/res/layout/layout_serch_dialog.xml
@@ -17,7 +17,7 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:text="确定清空历史搜索吗？"
-            android:textColor="@color/black"
+            android:textColor="#000000"
             android:textSize="17sp"/>
 
     </RelativeLayout>
@@ -32,7 +32,7 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:background="@color/white"
+            android:background="#ffffff"
             android:text="取消"
             android:textSize="15sp"/>
 
@@ -43,7 +43,7 @@
             android:layout_weight="1"
             android:background="#F23030"
             android:text="确定"
-            android:textColor="@color/white"
+            android:textColor="#ffffff"
             android:textSize="16sp"/>
 
     </LinearLayout>
