--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,12 +29,29 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:src="@drawable/tab_category_selector"/>
-
-        <ImageView
+        <RelativeLayout
             android:layout_width="0dp"
-            android:layout_height="match_parent"
             android:layout_weight="1"
+            android:layout_height="match_parent">
+        <ImageView
+            android:id="@+id/iv_cart"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:src="@drawable/tab_shopcart_selector"/>
+            <TextView
+                android:id="@+id/tv_count"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="20dp"
+                android:layout_marginTop="5dp"
+                android:layout_alignRight="@id/iv_cart"
+                android:background="@drawable/circle_red"
+                android:gravity="center"
+                android:textColor="#fff"
+                android:textSize="10sp"
+                android:visibility="invisible"
+                />
+        </RelativeLayout>
 
         <ImageView
             android:layout_width="0dp"
