列表按钮调大小

--- a/app/src/main/res/layout/type_popup_window1.xml
+++ b/app/src/main/res/layout/type_popup_window1.xml
@@ -65,8 +65,10 @@
             style="@style/TypePopWindowBtnStyle"
             android:text="夜夜"/>
 
-        <Button
-            style="@style/TypePopWindowBtnStyle"
+        <View
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_weight="1"
             android:background="#ffffff"/>
 
 
