--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -65,7 +65,7 @@
     <style name="TypePopWindowBtnStyle">
         <item name="android:clickable">true</item>
         <item name="android:layout_width">0dp</item>
-        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_height">25dp</item>
         <item name="android:layout_margin">3dp</item>
         <item name="android:layout_weight">1</item>
         <item name="android:background">@drawable/type_popwindow_btn_selector</item>
