--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -1,47 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-    >
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                android:layout_width="match_parent"
+                android:fitsSystemWindows="true"
+                android:layout_height="match_parent">
 
-    <com.young.jdmall.ui.view.RecyclerRefreshLayout
-        android:id="@+id/rv_fresh"
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/rv_user"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-    </com.young.jdmall.ui.view.RecyclerRefreshLayout>
 
+        <com.young.jdmall.ui.view.RecyclerRefreshLayout
+            android:id="@+id/rv_fresh"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/rv_user"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
+        </com.young.jdmall.ui.view.RecyclerRefreshLayout>
+
+    </RelativeLayout>
 
     <RelativeLayout
         android:id="@+id/ll_title_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="8dp"
-
-        >
+        android:padding="8dp">
 
         <ImageView
 
-            android:visibility="invisible"
             android:id="@+id/iv_user"
-            android:layout_centerVertical="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@mipmap/b0p"/>
+            android:layout_centerVertical="true"
+            android:background="@mipmap/b0p"
+            android:visibility="invisible"/>
 
         <TextView
             android:id="@+id/tv_myself"
-            android:visibility="invisible"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="我的"
             android:layout_centerInParent="true"
+            android:text="我的"
             android:textColor="@android:color/black"
-            android:textSize="20sp"/>
+            android:textSize="20sp"
+            android:visibility="invisible"/>
 
         <ImageView
             android:id="@+id/iv_message"
@@ -60,6 +64,6 @@
             android:layout_marginTop="10dp"
             android:layout_toLeftOf="@id/iv_message"
             android:background="@mipmap/a95"/>
-        </RelativeLayout>
-
     </RelativeLayout>
+
+</RelativeLayout>
