--- a/app/src/main/res/layout/category_header.xml
+++ b/app/src/main/res/layout/category_header.xml
@@ -4,10 +4,20 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent">
 
-    <android.support.v4.view.ViewPager
+    <!--<android.support.v4.view.ViewPager-->
+        <!--android:id="@+id/category_header_view_pager"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="120dp">-->
+    <!--</android.support.v4.view.ViewPager>-->
+
+    <!-- 自动轮播的第三方控件 -->
+    <com.bigkoo.convenientbanner.ConvenientBanner
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/category_header_view_pager"
         android:layout_width="match_parent"
-        android:layout_height="120dp">
-    </android.support.v4.view.ViewPager>
+
+        android:layout_height="108dp"
+        android:background="#ffffff"
+        app:canLoop="true"/>
 
 </LinearLayout>
