--- a/app/src/main/res/layout/fragment_goods_info.xml
+++ b/app/src/main/res/layout/fragment_goods_info.xml
@@ -33,13 +33,14 @@
                         android:background="@color/white">
 
                         <!-- 自动轮播的第三方控件 -->
-                        <com.bigkoo.convenientbanner.ConvenientBanner xmlns:app="http://schemas.android.com/apk/res-auto"
-                                                                      android:id="@+id/vp_item_goods_img"
-                                                                      android:layout_width="match_parent"
+                        <com.bigkoo.convenientbanner.ConvenientBanner
+                            xmlns:app="http://schemas.android.com/apk/res-auto"
+                            android:id="@+id/vp_item_goods_img"
+                            android:layout_width="match_parent"
 
-                                                                      android:layout_height="match_parent"
-                                                                      android:background="#ffffff"
-                                                                      app:canLoop="true"/>
+                            android:layout_height="match_parent"
+                            android:background="#ffffff"
+                            app:canLoop="true"/>
                     </FrameLayout>
 
                     <View
