--- a/app/src/main/res/layout/goods_item_head_img.xml
+++ b/app/src/main/res/layout/goods_item_head_img.xml
@@ -5,10 +5,9 @@
               xmlns:fresco="http://schemas.android.com/apk/res-auto"
               android:gravity="center"
               android:orientation="vertical">
-
+    <!--fresco:placeholderImage="@mipmap/default_pic"-->
     <com.facebook.drawee.view.SimpleDraweeView
         android:id="@+id/sdv_item_head_img"
-        fresco:placeholderImage="@mipmap/default_pic"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 </LinearLayout>
