--- a/app/src/main/res/layout/view_image_dialog.xml
+++ b/app/src/main/res/layout/view_image_dialog.xml
@@ -1,13 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                xmlns:app="http://schemas.android.com/apk/res-auto">
+
 
     <android.support.v4.view.ViewPager
         android:id="@+id/view_image_view_pager"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
     </android.support.v4.view.ViewPager>
+
+    <android.support.design.widget.TabLayout
+        android:id="@+id/image_dialog_tab_layout"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:tabBackground="@color/colorPrimary"
+        app:tabTextColor="@android:color/darker_gray"
+        app:tabSelectedTextColor="@android:color/holo_red_dark"
+        app:tabIndicatorColor="@android:color/holo_red_dark"
+        app:tabIndicatorHeight="3dp"
+        app:tabMode="scrollable">
+    </android.support.design.widget.TabLayout>
+
     <Button
         android:layout_centerHorizontal="true"
         android:layout_alignParentBottom="true"
