--- a/app/src/main/res/layout/goods_detail_view.xml
+++ b/app/src/main/res/layout/goods_detail_view.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="horizontal"
+            android:layout_marginLeft="2dp"
+              android:layout_marginRight="2dp"
               android:layout_width="match_parent"
-              android:background="#999900"
+              android:background="@mipmap/ace"
               android:layout_height="90dp">
 
     <ImageView
