--- a/app/src/main/res/layout/item_info.xml
+++ b/app/src/main/res/layout/item_info.xml
@@ -13,7 +13,7 @@
         android:id="@+id/item_info_image"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@mipmap/ic_launcher"/>
+        android:src="@mipmap/default_pic"/>
 
     <TextView
         android:id="@+id/item_info_text"
